--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -135,9 +135,8 @@ elseif(CONFIG_BOARD_TYPE_DOIT_ESP_VB6824)
                             "audio_codecs/cores3_audio_codec.cc"
                             "audio_codecs/tcircles3_audio_codec.cc")
 endif()
-if(CONFIG_BOARD_TYPE_DOIT_ESP_VB6824)
-# file(GLOB ASSETS ${CMAKE_CURRENT_SOURCE_DIR}/assets/zh_vb6824/*.p3)
-file(GLOB ASSETS ${CMAKE_CURRENT_SOURCE_DIR}/assets/zh/*.p3)
+if(CONFIG_AUDIO_CODEC_VB6824_TYPE_OPUS_16K_20MS)
+file(GLOB ASSETS ${CMAKE_CURRENT_SOURCE_DIR}/assets/zh_vb6824/*.p3)
 else()
 file(GLOB ASSETS ${CMAKE_CURRENT_SOURCE_DIR}/assets/zh/*.p3)
 endif()
