sync v1.5.6 & remote opus_codecs

--- a/components/78__esp-opus-encoder/idf_component.yml
+++ b/components/78__esp-opus-encoder/idf_component.yml
@@ -6,6 +6,6 @@ files:
   exclude:
   - .git
 license: MIT
-repository: git://github.com/78/esp-opus-encoder.git
-url: https://github.com/78/esp-opus-encoder.git
-version: 2.1.0
+repository: https://github.com/78/esp-opus-encoder
+url: https://github.com/78/esp-opus-encoder
+version: 2.3.0
