--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -8,18 +8,19 @@ dependencies:
   espressif/esp_io_expander_tca9554: "==2.0.0"
   espressif/esp_lcd_panel_io_additions: "^1.0.1"
   78/esp_lcd_nv3023: "~1.0.0"
-  78/esp-wifi-connect: "~2.3.2"
+  78/esp-wifi-connect: "~2.4.2"
   78/esp-opus-encoder: "~2.3.1"
   78/esp-ml307: "~1.9.0"
   78/xiaozhi-fonts: "~1.3.2"
   espressif/led_strip: "^2.4.1"
   espressif/esp_codec_dev: "~1.3.2"
   espressif/esp-sr: 
-    version: "^2.0.3"
+    version: "^2.0.5"
     rules: # will add "optional_component" only when all if clauses are True
       - if: "target in [esp32, esp32s3]" # supports boolean operator ==, !=, in, not in.
   espressif/button: "^3.3.1"
   espressif/knob: "^1.0.0"
+  espressif/esp_lcd_touch_ft5x06: "~1.0.6"
   lvgl/lvgl: "~9.2.2"
   esp_lvgl_port: "~2.4.4"
   espressif/esp_io_expander_tca95xx_16bit: "^2.0.0"
