--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -68,15 +68,15 @@ dependencies:
     rules:
     - if: target in [esp32c3]
   
-  sscma_client:
-    git: https://github.com/Seeed-Studio/SenseCAP-Watcher-Firmware.git
-    path: components/sscma_client
+  # sscma_client:
+  #   git: https://github.com/Seeed-Studio/SenseCAP-Watcher-Firmware.git
+  #   path: components/sscma_client
   
-  esp_jpeg_simd:
-    git: https://github.com/Seeed-Studio/SenseCAP-Watcher-Firmware.git
-    path: components/esp_jpeg_simd
-    rules:
-      - if: target not in [esp32p4, esp32c2]
+  # esp_jpeg_simd:
+  #   git: https://github.com/Seeed-Studio/SenseCAP-Watcher-Firmware.git
+  #   path: components/esp_jpeg_simd
+  #   rules:
+  #     - if: target not in [esp32p4, esp32c2]
 
   ## Required IDF version
   idf:
