--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -203,6 +203,8 @@ elseif(CONFIG_BOARD_TYPE_DOIT_AI_SPEAKER)
     set(BOARD_TYPE "doit-ai-speaker")
 elseif(CONFIG_BOARD_TYPE_DOIT_ESP32S3_EYE_6824)
     set(BOARD_TYPE "doit-esp32s3-eye-6824")
+elseif(CONFIG_BOARD_TYPE_DOIT_ESP32S3_EYE_6824_DIFF)
+    set(BOARD_TYPE "doit-esp32s3-eye-6824-diff")
 elseif(CONFIG_BOARD_TYPE_DOIT_ESP32S3_EYE_8311)
     set(BOARD_TYPE "doit-esp32s3-eye-8311")
 endif()
