--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -168,6 +168,8 @@ elseif(CONFIG_BOARD_TYPE_SENSECAP_WATCHER)
     set(BOARD_TYPE "sensecap-watcher")
 elseif(CONFIG_BOARD_TYPE_DOIT_S3_AIBOX)
     set(BOARD_TYPE "doit-s3-aibox")
+elseif(CONFIG_BOARD_TYPE_AWAKEN_AIBOARD)
+    set(BOARD_TYPE "Awaken_aiboard")
 elseif(CONFIG_BOARD_TYPE_MIXGO_NOVA)
     set(BOARD_TYPE "mixgo-nova")
 elseif(CONFIG_BOARD_TYPE_GENJUTECH_S3_1_54TFT)
